# mediawiki_langcodes

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml  release.yml  test.yml
build_script/: add_extra.py  db.py  download_files.py  extract_cldr.py  extract_mediawiki.py  main.py  mediawiki_api.py  wiktionary_cs.py  wiktionary_de.py  wiktionary_el.py  wiktionary_en.py  wiktionary_es.py  wiktionary_fi.py  wiktionary_fr.py  wiktionary_ja.py  wiktionary_nl.py  wiktionary_pl.py  wiktionary_ru.py  wiktionary_sv.py  wiktionary_th.py  wiktionary_tr.py  wiktionary_vi.py  wiktionary_zh.py
build_script/extra_names/: en.json  zh.json
src/mediawiki_langcodes/: __init__.py  convert.py
tests/: test_code_to_name.py  test_get_all_names.py  test_name_to_code.py
