[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mediawiki_langcodes"
version = "0.1.1"
authors = [
    {name = "xxyzz"}
]
description = "Convert MediaWiki language names and codes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU General Public License v3 or later (GPLv3+)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib_resources; python_version < '3.10'",
]

[project.urls]
"Homepage" = "https://github.com/xxyzz/mediawiki_langcodes"
"Bug Tracker" = "https://github.com/xxyzz/mediawiki_langcodes/issues"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "ruff",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
mediawiki_langcodes = [
    "*.db",
    "py.typed",
]

[tool.mypy]
check_untyped_defs = true
strict = true
exclude = ["build"]

[tool.ruff]
select = [
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle warning
]

[tool.typos]
type.json.check-file = false
